--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -95,6 +95,7 @@
     "accepted": "Accepted",
     "approve": "Approve",
     "cancel": "Cancel",
+    "back": "Back",
     "close": "Close",
     "continue": "Continue",
     "completed": "Completed",
