adding review suggestion

--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -176,7 +176,8 @@
   },
   "messages": {
     "refresh-the-page": "Refresh the page for the changes to take effect.",
-    "network-closed": "Network closed."
+    "network-closed": "Network closed.",
+    "updated-parameters": "Updated {{updated}} of {{total}} params"
   },
   "errors": {
     "failed-to-create-network": "Failed to create network {{error}}",
@@ -187,6 +188,8 @@
     "dispute-time": "The time that proposals can be disputed. Min. {{min}} and Max. {{max}} seconds.",
     "percentage-for-dispute": "`Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.`",
     "redeem-time": "The time after a bounty creation that it can be cancelled. Min. {{min}} and Max. {{max}} seconds.",
-    "council-amount": "The amount of {{token}} locked needed to be a council member. Min. {{min}} and Max. {{max}}."
+    "council-amount": "The amount of {{token}} locked needed to be a council member. Min. {{min}} and Max. {{max}}.",
+    "updating-values": "Error updating network values",
+    "updated-parameters": "Failed to update {{failed}} params"
   }
 }
