--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -164,7 +164,8 @@
     "next-step": "Next Step",
     "fork": "Fork",
     "organization": "Organization",
-    "total": "Total"
+    "total": "Total",
+    "clear": "Clear"
   },
   "modals": {
     "help-modal": {
