--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -1,10 +1,10 @@
 {
   "title": "Custom Network",
-  "query-url": "Query url",
+  "query-url": "Query URL",
   "close-network": "Close network",
-  "tokens-staked": "$TOKEN staked",
+  "tokens-staked": "${{symbol}} in the network",
   "tokens-staked-description": "$TOKEN staked",
-  "oracles-staked": "Oracles staked",
+  "oracles-staked": "Locked ${{symbol}}",
   "oracles-staked-description": "The amount of tokens locked by users to curate the network",
   "tvl": "TVL",
   "tvl-description": "Total locked value",
@@ -65,7 +65,7 @@
       "title": "Network Settings",
       "fields": {
         "colors": {
-          "label": "Colours",
+          "label": "Network Colours",
           "similar-colors": "These colours are very similar. Please pick a different colour.",
           "more-colors": "More colours",
           "types": {
@@ -176,7 +176,8 @@
   },
   "messages": {
     "refresh-the-page": "Refresh the page for the changes to take effect.",
-    "network-closed": "Network closed."
+    "network-closed": "Network closed.",
+    "updated-parameters": "Updated {{updated}} of {{total}} params"
   },
   "errors": {
     "failed-to-create-network": "Failed to create network {{error}}",
@@ -187,6 +188,8 @@
     "dispute-time": "The time that proposals can be disputed. Min. {{min}} and Max. {{max}} seconds.",
     "percentage-for-dispute": "`Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.`",
     "redeem-time": "The time after a bounty creation that it can be cancelled. Min. {{min}} and Max. {{max}} seconds.",
-    "council-amount": "The amount of {{token}} locked needed to be a council member. Min. {{min}} and Max. {{max}}."
+    "council-amount": "The amount of {{token}} locked needed to be a council member. Min. {{min}} and Max. {{max}}.",
+    "updating-values": "Error updating network values",
+    "updated-parameters": "Failed to update {{failed}} params"
   }
 }
