refactoring bounty list (#497)
* refactoring bounty list

* adding fundingAmount

* adjusting state

* adding className to Identicon component

* removing imports

* fix type

* adjusting bounty-status-info

* adding logic proposal

* adding funding state

* changing sm identicon

* fix

* removing react element label

* adding GetIssueState Helper

* creating GetIssueState Helper

--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -45,7 +45,9 @@
     "end-time": "at {{data}}",
     "pending": "pending",
     "in-progress": "in progress",
-    "open": "open"
+    "open": "open",
+    "funding": "funding",
+    "proposal": "proposal"
   },
   "actions": {
     "redeem": "Redeem",
