Dev 676 add date range filter to the payments page (#517)
* fix warning big key

* adding date-range-filter

* adjusting api params

* adding filter button and adjusting logic

* fix hook cicle problem

* adding logic to get endDate

* adjusting to also get only endDate

* adding translates

* adding payment-item and fix translation problem

* adjusting router logic and handleClick

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,6 +13,8 @@
     "search-repositories": "Search repositories",
     "repository": "repository",
     "all": "All",
+    "no-records-found": "No records found",
+    "clear-filter": "Clear filter",
     "bounties": {
       "title": "bounty state",
       "all": "All bounties",
