feat: reset gh account

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -81,7 +81,7 @@
       "join-discord": "Join the Discord",
       "follow-on-twitter": "Follow @bepronet on Twitter",
       "web-network-1": "Web Network Version 1.0",
-      "disconnect-wallet": "Disconnect Wallet"
+      "disconnect-wallet": "Disconnect"
     }
   },
   "select-a-repository": "Select a repository",
