--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -194,6 +194,7 @@
     "redeem-time": "The time after a bounty creation that it can be cancelled. Min. {{min}} and Max. {{max}} seconds.",
     "council-amount": "The amount of {{token}} locked needed to be a council member. Min. {{min}} and Max. {{max}}.",
     "updating-values": "Error updating network values",
-    "updated-parameters": "Failed to update {{failed}} params"
+    "updated-parameters": "Failed to update {{failed}} params",
+    "network-not-registered": "This network has yet to be registered to be usable, please do so."
   }
 }
