changing label and link

--- a/public/locales/en/council.json
+++ b/public/locales/en/council.json
@@ -8,5 +8,5 @@
   "become-council": "Become a Council",
   "become-council-description-part-one": "By becoming a council member you can participate in the bounty distribution and disputes on the network. Become a Council member by locking",
   "become-council-description-part-two": "through your wallet.",
-  "go-to-wallet": "Go To Wallet"
+  "go-to-oracles": "Go To Oracles"
 }
