--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -69,7 +69,8 @@
     "no-bounties-in-draft": "No bounties in draft",
     "no-bounties-to-merge": "No bounties ready to merge",
     "creating-bounty": "Error creating bounty",
-    "sync": "The bounty was created, but something went wrong while reading the blockchain, please go to the home page while we try to get your bounty"
+    "sync": "The bounty was created, but something went wrong while reading the blockchain, please go to the home page while we try to get your bounty",
+    "exceeds-allowance": "Bounty amount exceeds your allowance"
   },
   "title": "Create new Bounty",
   "fields": {
