Dev 705 match web network to dappkit 2 0 9 (#566)
* Dappkit 2.0.9 (#543)

* feat: script deploy dappkit 2.0.9

* feat: update network_v2 methods

* Dev 707 update webnetwork events do listen events of dappkit 2 0 9 (#547)

* adding method deploy ERC20 to useERC20 hook

* adjusting deployNetworkV2 and adding withdraw fund

* adding get tokens to api

* styles from select-multiple

* adding and adjusting methods from contract

* adding new flow to network and new logic tokens

* adding translations

* adding Translations

* adding withdraw reward funding logic

* adding new flow to my-network-page

* Update components/custom-network/token-configuration.tsx

Co-authored-by: Vitor Hugo <vhcsilvaa@gmail.com>

* adjusting method to getERC20 data

* adding logic to add tokens when no allowed tokens

* adding translations

* removing validation allowed tokens in new-network

* adding new logic for when user is registry

* adding registry-governor component

* adding needed translations

* adding new route for updateTokens

* adding new transactoni-type

* adjusting inputs

* ajusting dappkit version

* adding new logic get allowedTokens from database

* adjusting tokens settings to receive promises

* adjusting service to solve promise problems

* adjusting updateTokens database

* adding helper to handle allowedTokens

* fix get to post

* fix indentation transactionHandler

* rm warning used to setInterval

* adding events logc to registry

* change allowed event

* adjusting TransactionsReceiptWebCore

* adjusting to new dappkit 2.1.1 and updateTokens

* ajudsting deploy to adding allowedtokens database

* adding down to migrate:uno

* adding get tokens to api

* adding new flow to network and new logic tokens

* adding logic to add tokens when no allowed tokens

* adding translations

* adding new logic for when user is registry

* adding needed translations

* adding new route

--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -14,6 +14,17 @@
   "redeem-time": "Draft time",
   "council-amount": "Council Amount",
   "save-settings": "Save settings",
+  "config-tokens-registry": "Config Allowed Tokens",
+  "config-tokens": "Config Tokens",
+  "save-transactional-config": "Save transactional configs",
+  "save-reward-config": "Save reward configs",
+  "registry": {
+    "title-governor": "Registry Governor",
+    "config-fees": "Config Fees",
+    "save-fees-config": "Save fees config"
+  },
+  "add-tokens": "Add Tokens",
+  "remove-tokens": "Remove Tokens",
   "hero": {
     "title": "Networks",
     "explanatory-text": "A list of all the networks using BEPRO network for their development",
@@ -84,7 +95,9 @@
         },
         "other-settings": {
           "title": "Other Settings",
-          "parameters-warning": "Changing these parameters will launch a new transaction for each one."
+          "parameters-warning": "Changing these parameters will launch a new transaction for each one.",
+          "warning-registry": "These values were chosen by the network registry and are subject to change",
+          "warning-add-remove-allowed-tokens": "if there is removal and addition of tokens, two transactions will be required"
         },
         "fees": {
           "title": "Fees"
@@ -104,7 +117,7 @@
       "title": "Token Configuration",
       "fields": {
         "tokens-dropdown": {
-          "label": "Network Token",
+          "label": "Network Token address",
           "description": "Add an ERC20 token to be used as network token."
         },
         "name": {
@@ -130,7 +143,7 @@
         }
       },
       "actions": {
-        "deploy-nft-token": "Deploy New NFT Token"
+        "deploy-new-token": "Deploy New Token"
       }
     },
     "treasury": {
