--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -4,6 +4,7 @@
   "deletaged-to-me": "Delegated to me",
   "deletaged-to-others": "Delegated to others",
   "connect-wallet": "Connect Wallet",
+  "council": "Curator",
   "connect-github": "Connect Github",
   "connections": "Connections",
   "payments": {
