--- a/public/locales/en/council.json
+++ b/public/locales/en/council.json
@@ -1,6 +1,6 @@
 {
   "title": "Bounties ready to propose",
-  "subtitle": "Use your *ORACLES* to create bounty distributions within the Network",
+  "subtitle": "Use your *bv{{token}}* to create bounty distributions within the Network",
   "ready-bountys": "Ready Bounties",
   "council-members": "Curators",
   "distributed-developers": "Distributed to developers",
@@ -8,5 +8,5 @@
   "become-council": "Become a Curator",
   "become-council-description-part-one": "By becoming a curator you can participate in the bounty distribution and disputes on the network. Become a Curator by locking",
   "become-council-description-part-two": "through your wallet.",
-  "go-to-oracles": "Go To Oracles"
+  "go-to-oracles": "Go To bv{{token}}"
 }
