adding oracles translation changes

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "title": "Hello world",
   "$oracles": "bv{{token}}",
+  "bepro-votes": "Bepro Votes",
   "$bepro": "$BEPRO",
   "bepro": "BEPRO",
   "please-wait": "Please wait",
