--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -1,7 +1,7 @@
 {
   "title": "Hello world",
   "$oracles": "bv{{token}}",
-  "$bepro": "$BEPRO",
+  "$bepro": "BEPRO",
   "please-wait": "Só um momento",
   "close": "fechar",
   "filters": {
@@ -84,7 +84,7 @@
   },
   "mobile-information": {},
   "nation-dialog": {
-    "at-the-moment": "De momento, os serviços BEPRO e o token BEPRO (BEPRO) não estão disponíveis no seu país ",
+    "at-the-moment": "De momento, os serviços BEPRO e o token BEPRO não estão disponíveis no seu país ",
     "excluded": "Jurisdições excluídas .",
     "further": "Para mais informações contacte-nos em ",
     "email": "general@bepro.network"
@@ -95,7 +95,7 @@
     "waiting": "à espera",
     "operational": "operacional ",
     "network-congestion": "congestionamento na rede",
-    "tagline": "Os serviços de rede Bepro e o token BEPRO ($ BEPRO) não estão disponíveis em jurisdições excluídas. Ao acessar e usar a interface, você concorda com nosso ",
+    "tagline": "Os serviços de rede Bepro e o token BEPRO não estão disponíveis em jurisdições excluídas. Ao acessar e usar a interface, você concorda com nosso ",
     "terms-and-conditions": "termos e condições",
     "support": "suporte"
   },
