--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -2,9 +2,9 @@
   "title": "Custom Network",
   "query-url": "Query URL",
   "close-network": "Close network",
-  "tokens-staked": "${{symbol}} in the network",
-  "tokens-staked-description": "$TOKEN staked",
-  "oracles-staked": "Locked ${{symbol}}",
+  "tokens-staked": "{{symbol}} in the network",
+  "tokens-staked-description": "TOKEN staked",
+  "oracles-staked": "Locked {{symbol}}",
   "oracles-staked-description": "The amount of tokens locked by users to curate the network",
   "tvl": "TVL",
   "tvl-description": "Total locked value",
