--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "title": "Hello world",
   "$oracles": "bv{{token}}",
   "bepro-votes": "Bepro Votes",
-  "$bepro": "$BEPRO",
+  "$bepro": "BEPRO",
   "bepro": "BEPRO",
   "please-wait": "Please wait",
   "close": "Close",
@@ -71,7 +71,7 @@
       "view-profile": "View profile",
       "profile": "Profile",
       "wallet": "Wallet",
-      "oracles": "bv{{token}}",
+      "oracles": "lock/unlock",
       "payments": "Payments",
       "bounties": "Bounties",
       "pull-requests": "Pull Requests",
@@ -98,7 +98,7 @@
     "waiting": "waiting",
     "operational": "operational",
     "network-congestion": "network congestion",
-    "tagline": "Bepro Network Services and BEPRO Token ($BEPRO) are not available in Excluded Jurisdictions. By accessing and using the interface you agree with our",
+    "tagline": "Bepro Network Services and BEPRO Token are not available in Excluded Jurisdictions. By accessing and using the interface you agree with our",
     "terms-and-conditions": "Terms & Conditions",
     "support": "support"
   },
@@ -173,7 +173,7 @@
     "upload": "upload",
     "token": "token",
     "token_other": "tokens",
-    "$token": "$TOKEN",
+    "$token": "TOKEN",
     "creation-date": "creation date",
     "seconds": "seconds",
     "on": "on",
