using to fixed because of scientific notation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -167,7 +167,7 @@
     "from": "From",
     "to": "To",
     "status": "Status",
-    "available": "available",
+    "available": "Available",
     "giving-away": "giving away",
     "locked": "Locked",
     "upload": "upload",
