Dev 807 front end is rounding values when it has many decimal places (#592)
* processEvent cannot stop transaction conclusion

* if processEvent throws error the transaction must continue

* adding bignumber

* changing amount columns type to string

* using string for amounts

* using bignumber

* hiding update amount when is a funding request

* removing unused parameter and logic

* using bignumber and string for amounts

* fixes

* fixes

* removing $ from token symbol

* using bignumber

* fix

* update dappkit version

* fix translation

* using bignumber

* removing $

* using date from chain

* fix translation

* fix condition

* using bignumber

* handling user reject

* fix percent

* using bignumber

* fix

* removing console.log

* user can start working at any time

* fixes

* fix

* fix

* fix

* adding tokens to registry

* fix preview

* fixes

* fixes

* using to fixed because of scientific notation

* more fixes

* fixes

* using tofixed

* block negative numbers

* removing console.log

* fix

* fix

* fixes

* fix translation

* review fixes

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -167,7 +167,7 @@
     "from": "From",
     "to": "To",
     "status": "Status",
-    "available": "available",
+    "available": "Available",
     "giving-away": "giving away",
     "locked": "Locked",
     "upload": "upload",
@@ -278,7 +278,7 @@
     },
     "already-has-network": {
       "title": "Network already exists",
-      "button-label": "My networks",
+      "button-label": "My network",
       "content": "Connected wallet already has a network."
     },
     "settings-not-loaded": {
@@ -345,7 +345,7 @@
       "dispute": "Dispute bounty",
       "propose": "Propose merge request",
       "close-bounty": "Close bounty",
-      "redeem-bounty": "Redeem bounty",
+      "redeem-bounty": "Cancel bounty",
       "approve-settler": "Approve Network Token",
       "recognize-finished": "Recognize bounty as finished",
       "create-pull-request": "Create Pull Request",
