--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -111,7 +111,8 @@
       "you-need-to-accept": "You need to accept this so the bot can interact with the repositories.",
       "label": "Repositories",
       "used-by-other-network": "The highlighted repositories are already being used by another network.",
-      "has-bounties": "The highlighted repositories already have bounties and can't be removed."
+      "has-bounties": "The highlighted repositories already have bounties and can't be removed.",
+      "user-permission-not-admin": "Your permission level on this repository does not allow giving access"
     },
     "token-configuration": {
       "title": "Token Configuration",
