adding seconds to the component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -392,6 +392,8 @@
     "years_other": "years",
     "days": "day",
     "days_other": "days",
+    "seconds": "second",
+    "seconds_other": "seconds",
     "text-data": "Opened {{value}} Ago"
   }
 }
