it is possible to get the chain id without having the wallet conected

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -182,7 +182,8 @@
     "organization": "Organization",
     "total": "Total",
     "clear": "Clear",
-    "wallet": "Wallet"
+    "wallet": "Wallet",
+    "unkown": "Unknown"
   },
   "modals": {
     "help-modal": {
