--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -98,7 +98,7 @@
     "waiting": "waiting",
     "operational": "operational",
     "network-congestion": "network congestion",
-    "tagline": "By accessing and using the interface you agree with our",
+    "tagline": "Bepro Network Services and BEPRO Token are not available in Excluded Jurisdictions. By accessing and using the interface you agree with our",
     "terms-and-conditions": "Terms & Conditions",
     "support": "support"
   },
