--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -89,7 +89,7 @@
     "waiting": "à espera",
     "operational": "operacional ",
     "network-congestion": "congestionamento na rede",
-    "tagline": "Ao acessar e usar a interface, você concorda com nosso ",
+    "tagline": "Os serviços de rede Bepro e o token BEPRO não estão disponíveis em jurisdições excluídas. Ao acessar e usar a interface, você concorda com nossos ",
     "terms-and-conditions": "termos e condições",
     "support": "suporte"
   },
