DEV-896 get isarchived repo

--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -205,7 +205,7 @@
     "images-too-big": "Your images are too big, maximum 1MB for both files combined",
     "not-found": "You don't have a custom network created.",
     "dispute-time": "The time that proposals can be disputed. Min. {{min}} and Max. {{max}} seconds.",
-    "percentage-for-dispute": "`Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.`",
+    "percentage-for-dispute": "Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.",
     "redeem-time": "The time after a bounty creation that it can be cancelled. Min. {{min}} and Max. {{max}} seconds.",
     "council-amount": "The amount of {{token}} locked needed to be a curator. Min. {{min}} and Max. {{max}}.",
     "updating-values": "Error updating network values",
