Dev 893 logos are not being shown on my network page (#624)
* adding logic to upload images too big

* translates to images too big

* adding logic to show logos on my network page

* rm console

* fix add svg to infura

* converting size to MiB

* adjusting conditional logo/icon size

* adjusting lint

* adjusting order

* fix space

--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -202,6 +202,7 @@
     "failed-to-update-network": "Failed to update network {{error}}",
     "failed-to-close-network": "Failed to close network {{error}}",
     "invalid-format": "Invalid format",
+    "images-too-big": "Your images are too big, maximum 1MB for both files combined",
     "not-found": "You don't have a custom network created.",
     "dispute-time": "The time that proposals can be disputed. Min. {{min}} and Max. {{max}} seconds.",
     "percentage-for-dispute": "`Percentage needed for a proposal to be disputed by the community. Max. {{max}}%.`",
