--- a/public/locales/en/bounty.json
+++ b/public/locales/en/bounty.json
@@ -72,7 +72,8 @@
     "creating-bounty": "Error creating bounty",
     "bounty-canceled": "Bounty creation canceled",
     "sync": "The bounty was created, but something went wrong while reading the blockchain, please go to the home page while we try to get your bounty",
-    "exceeds-allowance": "Bounty amount exceeds your allowance"
+    "exceeds-allowance": "Bounty amount exceeds your allowance",
+    "exceeds-minimum-amount": "Minimum amount is {{amount}}"
   },
   "title": "Create new Bounty",
   "fields": {
