--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -116,6 +116,11 @@
     },
     "token-configuration": {
       "title": "Token Configuration",
+      "tabs": {
+        "use-bepro-token": "Use BEPRO Token",
+        "use-custom-token": "Use Custom Token",
+        "deploy-new-token": "Deploy New Token"
+      },
       "fields": {
         "tokens-dropdown": {
           "label": "Network Token address",
@@ -129,6 +134,15 @@
         },
         "address": {
           "label": "Address"
+        },
+        "decimals": {
+          "label": "Decimals"
+        },
+        "total-supply": {
+          "label": "Total Supply"
+        },
+        "your-balance": {
+          "label": "Your Balance"
         },
         "nft-token": {
           "label": "NFT Token Address",
@@ -144,7 +158,11 @@
         }
       },
       "actions": {
-        "deploy-new-token": "Deploy New Token"
+        "deploy": "Deploy"
+      },
+      "errors": {
+        "invalid-number": "Please provide a valid number",
+        "lower-than-zero": "Please provider a number greater than zero"
       }
     },
     "treasury": {
