--- a/public/locales/en/custom-network.json
+++ b/public/locales/en/custom-network.json
@@ -112,7 +112,10 @@
       "label": "Repositories",
       "used-by-other-network": "The highlighted repositories are already being used by another network.",
       "has-bounties": "The highlighted repositories already have bounties and can't be removed.",
-      "user-permission-not-admin": "Your permission level on this repository does not allow giving access"
+      "user-permission-not-admin_one": "Your permission level on this repository does not allow giving access",
+      "user-permission-not-admin_other": "Your permission level on these repositories does not allow giving access",
+      "no-merge-commit-permission_one": "Repository {{repos}} don't support \"merge commits\" merge type. Please, allow that in the repository settings", 
+      "no-merge-commit-permission_other": "Repositories {{repos}} doesn't support \"merge commits\" merge type. Please, allow that in the repositories settings" 
     },
     "token-configuration": {
       "title": "Token Configuration",
